--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,11 +79,13 @@ jobs:
     steps:
       - name: Checkout code # checking out code.
         uses: actions/checkout@v2
-      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main # settings up gcloud cli in our job machine.
+      - uses: google-github-actions/setup-gcloud@v2 # settings up gcloud cli in our job machine.
         with:
           version: '270.0.0'
           service_account_email: ${{ secrets.GKE_EMAIL }} # email address of our service account that will be created with storage and kubernetes permissions
           service_account_key: ${{ secrets.GKE_PASSWORD }} # service account file.
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
       - name: Set Repo Location # steps required to find the image id of our image from contiainer registry
         id: repo
         run: echo "::set-output name=repo_name::gcr.io/${{secrets.GKE_PROJECT}}/github-django-actions/app:sha-$(git rev-parse --short HEAD)" # we are setting the image location as output to be used in later step
